# heartmula-web-

./: .gitignore  CLAUDE.md  README.md  lyrics.txt  lyricsbad.txt  pyproject.toml  requirements.txt  标签.txt
assets/: lyrics.txt  tags.txt
example/: tags.txt
examples/: README.md  run_lyrics_transcription.py  run_music_generation.py
heartlib/: __init__.py
heartlib/heartcodec/: configuration_heartcodec.py  modeling_heartcodec.py
heartlib/heartcodec/models/: flow_matching.py  sq_codec.py  transformer.py
heartlib/heartmula/: configuration_heartmula.py  modeling_heartmula.py
heartlib/pipelines/: lyrics_transcription.py  music_generation.py
src/: config.py
src/agents/: context.py  llm_factory.py  middleware.py  music_agent.py  prompts.py
src/api/: __init__.py  main.py  schemas.py
src/api/routers/: __init__.py  generate.py  tags.py  transcribe.py
src/api/services/: __init__.py  generator.py  tags.py  transcriber.py
src/utils/: __init__.py  logger.py
static/: generate.css  generate.html  generate.js  index.html  lyrics.css  lyrics.html  lyrics.js  script.js  showcase.css  showcase.html  showcase.js  styles.css
tests/api/: test_tags.py
