[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heartmula"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.0.2",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "torchao==0.9.0",
    "torchcodec==0.10.0",
    "torchtune==0.4.0",
    "tqdm==4.67.1",
    "traitlets==5.7.1",
    "traittypes==0.2.3",
    "transformers==4.57.0",
    "tokenizers==0.22.1",
    "einops==0.8.1",
    "accelerate==1.12.0",
    "bitsandbytes==0.49.0",
    "vector-quantize-pytorch==1.27.15",
    "modelscope==1.33.0",
    "soundfile==0.13.1",
    "fastapi==0.115.0",
    "uvicorn==0.34.0",
    "python-multipart==0.0.20",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ipykernel==6.30.1",
]
